ProcessCore: Check the actual previous values when updating IO rates

During startup, we may end up updating IO rates with a previous value of
0. This leads to ridiculously large numbers. To prevent it, don't use a
global flag to track this, but check the actual previous values and
elapsed time when updating rates and ignore updates when either is <= 0.

BUG: 444127